--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 							placeholder="Task Name"
 							tabindex="1"
 							title="Enter Your Task"
+							autocomplete="name"
 						/>
 						<button id="addTaskButton">Add Task</button>
 						<button title="Clear All Tasks" id="deleteTaskButton">
