--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 							tabindex="1"
 							title="Enter Your Task"
 							autocomplete="name"
+							
 						/>
 						<button id="addTaskButton">Add Task</button>
 						<button title="Clear All Tasks" id="deleteTaskButton">
@@ -99,6 +100,30 @@
 								<path d="M9 6V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
 							</svg>
 						</button>
+						<button id="searchButton" title="Search">
+							<?xml version="1.0" encoding="utf-8"?>
+							<svg
+								width="24"
+								height="24"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
+									stroke="#000000"
+									stroke-width="1"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+						<input
+							type="text"
+							class="search__hidden"
+							id="searchInput"
+							placeholder="Search tasks"
+						/>
 					</div>
 					<div class="task-list">
 						<ul id="taskList"></ul>
