--- a/index.html
+++ b/index.html
@@ -3,135 +3,121 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/main.css" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="icon" href="./image/icons/check-mar2k.png" />
-		<title>To Do Application</title>
+		<link rel="icon" href="./image/icons/check-circle.svg" />
+		<title>To Do Application 2.0</title>
 	</head>
 	<body>
 		<div class="wrapper">
-			<div class="container">
-				<div class="header">
+			<header class="header">
+				<div class="container header__container">
 					<div class="header__logo">
-						<img src="./image/icons/check-circle.svg" alt="" />
+						<img src="./image/icons/check-circle.svg" alt="Logo" />
 					</div>
-					<div>
-						<h1 class="title">TO DO | Where do we Start?</h1>
+					<div class="title header__title">
+						<h1>TO DO | Where do we Start?</h1>
 					</div>
-					<div class="header__settings">
-						<div class="header__menu-inner">
-							<button title="Settings" id="header__menu-btn">
-								<svg
-									width="40px"
-									height="40px"
-									viewBox="0 0 24 24"
-									xmlns="http://www.w3.org/2000/svg"
-								>
-									<rect
-										x="0"
-										y="0"
-										width="40"
-										height="40	"
-										fill="none"
-										pointer-events="visibleFill"
-									/>
-									<path
-										stroke="#778899"
-										stroke-width="0.5"
-										fill="none"
-										d="M20.017 14.669L23 13.564l-.012-3.208-2.996-1.085a8.455 8.455 0 0 0-.437-1.05l1.329-2.893-2.277-2.26-2.886 1.351a8.396 8.396 0 0 0-1.052-.436L13.564 1l-3.208.012-1.085 2.996a8.485 8.485 0 0 0-1.05.437L5.328 3.116l-2.26 2.276L4.419 8.28a8.378 8.378 0 0 0-.436 1.052L1 10.436l.012 3.208 2.996 1.085a8.46 8.46 0 0 0 .437 1.05l-1.329 2.893 2.276 2.26 2.887-1.351a8.383 8.383 0 0 0 1.052.436L10.436 23l3.208-.012 1.085-2.996a8.478 8.478 0 0 0 1.05-.437l2.893 1.329 2.26-2.276-1.351-2.887a8.382 8.382 0 0 0 .436-1.052zm-.287 3.73l-1.275 1.285-2.694-1.238-.429.215a7.612 7.612 0 0 1-.928.385l-.452.156-1.01 2.789-1.81.007-1.03-2.779-.456-.151a7.394 7.394 0 0 1-.926-.385l-.43-.21-2.688 1.257-1.286-1.275 1.239-2.695-.216-.43a7.551 7.551 0 0 1-.386-.926l-.155-.452-2.79-1.01-.005-1.81 2.777-1.03.152-.456a7.46 7.46 0 0 1 .384-.927l.212-.43L4.27 5.601l1.275-1.285 2.694 1.238.429-.215a7.612 7.612 0 0 1 .928-.385l.452-.156 1.01-2.789 1.81-.007 1.03 2.779.456.151a7.35 7.35 0 0 1 .925.385l.43.211L18.4 4.27l1.285 1.275-1.239 2.695.216.43a7.551 7.551 0 0 1 .386.926l.155.452 2.79 1.01.005 1.81-2.777 1.03-.152.456a7.46 7.46 0 0 1-.384.927l-.212.43zM12 7.2a4.8 4.8 0 1 0 4.8 4.8A4.8 4.8 0 0 0 12 7.2zm0 8.6a3.8 3.8 0 1 1 3.8-3.8 3.804 3.804 0 0 1-3.8 3.8z"
-									/>
-								</svg>
+					<div class="header__options">
+						<div class="header__options-inner">
+							<button title="Options" id="header__options-button">
+								<img src="./image/icons/options.svg" alt="Options" />
 							</button>
-							<div class="header__menu header__menu-hidden">
+							<div id="options-dropdown">
 								<button
-									class="header__menu-item"
-									data-action="clear-comp-tasks"
+									class="header__options-item"
+									data-action="clear-completed-tasks"
 								>
-									Clear All Completed Tasks
+									Clear all completed tasks
 								</button>
 								<button
-									class="header__menu-item"
+									class="header__options-item"
 									data-action="sort-alphabetically"
 								>
-									Sort Alphabetically
+									Sort alphabetically
 								</button>
 								<button
-									class="header__menu-item"
+									class="header__options-item"
 									data-action="sort-by-priority"
 								>
-									Sort By Priority
+									Sort by priority
 								</button>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="todo-main">
-					<div class="task-input">
-						<input
-							type="text"
-							id="taskInput"
-							placeholder="Task Name"
-							tabindex="1"
-							title="Enter Your Task"
-							autocomplete="name"
-						/>
-						<button id="addTaskButton">Add Task</button>
-						<button title="Clear All Tasks" id="deleteTaskButton">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="24"
-								height="24"
-								viewBox="0 0 24 24"
-								fill="none"
-								stroke-width="1"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								class="feather feather-trash-2"
-							>
-								<polyline points="3 6 5 6 21 6"></polyline>
-								<path d="M19 6l-2 14H7L5 6"></path>
-								<path d="M10 11v6"></path>
-								<path d="M14 11v6"></path>
-								<path d="M9 6V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
-							</svg>
-						</button>
-						<button id="searchButton" title="Search">
-							<?xml version="1.0" encoding="utf-8"?>
-							<svg
-								width="24"
-								height="24"
-								viewBox="0 0 24 24"
-								fill="none"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<path
-									d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
-									stroke="#000000"
-									stroke-width="1"
-									stroke-linecap="round"
-									stroke-linejoin="round"
+			</header>
+
+			<section class="todo-create">
+				<div class="container">
+					<div class="todo-create-inner">
+						<form id="todo-create__form">
+							<input
+								type="text"
+								name="content"
+								title="Enter your task"
+								autocomplete="name"
+								id="todo-create__form-input-text"
+								placeholder="Task name"
+							/>
+							<input
+								id="todo-create__form-submit"
+								type="submit"
+								value="Add Task"
+							/>
+						</form>
+						<div class="todo-create__search">
+							<form action="#" class="todo-create__search-content">
+								<input
+									type="text"
+									name="search"
+									title="Search"
+									autocomplete="off"
+									id="todo-create__search-input"
+									placeholder="Search for..."
 								/>
-							</svg>
-						</button>
-						<input
-							type="text"
-							class="search__hidden"
-							id="searchInput"
-							placeholder="Search tasks"
-						/>
-					</div>
-					<div class="task-list">
-						<ul id="taskList"></ul>
+								<button class="todo-create__search-button">
+									<img src="./image/icons/search.svg" alt="Search" />
+								</button>
+							</form>
+						</div>
 					</div>
 				</div>
-			</div>
+			</section>
+			<section class="todo-list">
+				<div class="container">
+					<ul class="todo-list-inner">
+						<!-- <li class="todo-list__item">
+									<label>
+										<input type="checkbox" />
+										<span class="checkbox__custom"></span>
+									</label>
+									<div class="todo-list-content">
+										<input type="text" value="Make a video" readonly />
+									</div>
+									<div class="todo-list__actions">
+										<button class="todo-list__edit">
+											<img src="./image/icons/edit-task.svg" alt="Edit Task" />
+										</button>
+										<button class="todo-list__important-mark">
+											<img
+												src="./image/icons/important-mark.svg"
+												alt="Mark as important"
+											/>
+										</button>
+										<button class="todo-list__delete">
+											<img src="./image/icons/delete-task.svg" alt="Delete Task" />
+										</button>
+									</div>
+								</li> -->
+					</ul>
+				</div>
+			</section>
 		</div>
 
-		<script type="module" src="./js/taskManager.js"></script>
-		<script type="module" src="./js/app.js"></script>
+		<script type="module" src="./js/main.js"></script>
 	</body>
 </html>
